qt6/spatialaudio/gen_qaudioengine.nim

import Qt6SpatialAudio_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6SpatialAudio")
{.compile("gen_qaudioengine.cpp", cflags).}


type QAudioEngineOutputMode* = cint
const
  QAudioEngineSurround* = 0
  QAudioEngineStereo* = 1
  QAudioEngineHeadphone* = 2



import gen_qaudioengine_types
export gen_qaudioengine_types

import
  gen_qaudiodevice,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs
export
  gen_qaudiodevice,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs

type cQAudioEngine*{.exportc: "QAudioEngine", incompleteStruct.} = object

proc fcQAudioEngine_new(): ptr cQAudioEngine {.importc: "QAudioEngine_new".}
proc fcQAudioEngine_new2(parent: pointer): ptr cQAudioEngine {.importc: "QAudioEngine_new2".}
proc fcQAudioEngine_new3(sampleRate: cint): ptr cQAudioEngine {.importc: "QAudioEngine_new3".}
proc fcQAudioEngine_new4(sampleRate: cint, parent: pointer): ptr cQAudioEngine {.importc: "QAudioEngine_new4".}
proc fcQAudioEngine_metaObject(self: pointer, ): pointer {.importc: "QAudioEngine_metaObject".}
proc fcQAudioEngine_metacast(self: pointer, param1: cstring): pointer {.importc: "QAudioEngine_metacast".}
proc fcQAudioEngine_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAudioEngine_metacall".}
proc fcQAudioEngine_tr(s: cstring): struct_miqt_string {.importc: "QAudioEngine_tr".}
proc fcQAudioEngine_setOutputMode(self: pointer, mode: cint): void {.importc: "QAudioEngine_setOutputMode".}
proc fcQAudioEngine_outputMode(self: pointer, ): cint {.importc: "QAudioEngine_outputMode".}
proc fcQAudioEngine_sampleRate(self: pointer, ): cint {.importc: "QAudioEngine_sampleRate".}
proc fcQAudioEngine_setOutputDevice(self: pointer, device: pointer): void {.importc: "QAudioEngine_setOutputDevice".}
proc fcQAudioEngine_outputDevice(self: pointer, ): pointer {.importc: "QAudioEngine_outputDevice".}
proc fcQAudioEngine_setMasterVolume(self: pointer, volume: float32): void {.importc: "QAudioEngine_setMasterVolume".}
proc fcQAudioEngine_masterVolume(self: pointer, ): float32 {.importc: "QAudioEngine_masterVolume".}
proc fcQAudioEngine_setPaused(self: pointer, paused: bool): void {.importc: "QAudioEngine_setPaused".}
proc fcQAudioEngine_paused(self: pointer, ): bool {.importc: "QAudioEngine_paused".}
proc fcQAudioEngine_setRoomEffectsEnabled(self: pointer, enabled: bool): void {.importc: "QAudioEngine_setRoomEffectsEnabled".}
proc fcQAudioEngine_roomEffectsEnabled(self: pointer, ): bool {.importc: "QAudioEngine_roomEffectsEnabled".}
proc fcQAudioEngine_setDistanceScale(self: pointer, scale: float32): void {.importc: "QAudioEngine_setDistanceScale".}
proc fcQAudioEngine_distanceScale(self: pointer, ): float32 {.importc: "QAudioEngine_distanceScale".}
proc fcQAudioEngine_outputModeChanged(self: pointer, ): void {.importc: "QAudioEngine_outputModeChanged".}
proc fQAudioEngine_connect_outputModeChanged(self: pointer, slot: int) {.importc: "QAudioEngine_connect_outputModeChanged".}
proc fcQAudioEngine_outputDeviceChanged(self: pointer, ): void {.importc: "QAudioEngine_outputDeviceChanged".}
proc fQAudioEngine_connect_outputDeviceChanged(self: pointer, slot: int) {.importc: "QAudioEngine_connect_outputDeviceChanged".}
proc fcQAudioEngine_masterVolumeChanged(self: pointer, ): void {.importc: "QAudioEngine_masterVolumeChanged".}
proc fQAudioEngine_connect_masterVolumeChanged(self: pointer, slot: int) {.importc: "QAudioEngine_connect_masterVolumeChanged".}
proc fcQAudioEngine_pausedChanged(self: pointer, ): void {.importc: "QAudioEngine_pausedChanged".}
proc fQAudioEngine_connect_pausedChanged(self: pointer, slot: int) {.importc: "QAudioEngine_connect_pausedChanged".}
proc fcQAudioEngine_distanceScaleChanged(self: pointer, ): void {.importc: "QAudioEngine_distanceScaleChanged".}
proc fQAudioEngine_connect_distanceScaleChanged(self: pointer, slot: int) {.importc: "QAudioEngine_connect_distanceScaleChanged".}
proc fcQAudioEngine_start(self: pointer, ): void {.importc: "QAudioEngine_start".}
proc fcQAudioEngine_stop(self: pointer, ): void {.importc: "QAudioEngine_stop".}
proc fcQAudioEngine_pause(self: pointer, ): void {.importc: "QAudioEngine_pause".}
proc fcQAudioEngine_resume(self: pointer, ): void {.importc: "QAudioEngine_resume".}
proc fcQAudioEngine_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAudioEngine_tr2".}
proc fcQAudioEngine_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAudioEngine_tr3".}
proc fQAudioEngine_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QAudioEngine_virtualbase_metaObject".}
proc fcQAudioEngine_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_metaObject".}
proc fQAudioEngine_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QAudioEngine_virtualbase_metacast".}
proc fcQAudioEngine_override_virtual_metacast(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_metacast".}
proc fQAudioEngine_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QAudioEngine_virtualbase_metacall".}
proc fcQAudioEngine_override_virtual_metacall(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_metacall".}
proc fQAudioEngine_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAudioEngine_virtualbase_event".}
proc fcQAudioEngine_override_virtual_event(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_event".}
proc fQAudioEngine_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAudioEngine_virtualbase_eventFilter".}
proc fcQAudioEngine_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_eventFilter".}
proc fQAudioEngine_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAudioEngine_virtualbase_timerEvent".}
proc fcQAudioEngine_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_timerEvent".}
proc fQAudioEngine_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAudioEngine_virtualbase_childEvent".}
proc fcQAudioEngine_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_childEvent".}
proc fQAudioEngine_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAudioEngine_virtualbase_customEvent".}
proc fcQAudioEngine_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_customEvent".}
proc fQAudioEngine_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAudioEngine_virtualbase_connectNotify".}
proc fcQAudioEngine_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_connectNotify".}
proc fQAudioEngine_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAudioEngine_virtualbase_disconnectNotify".}
proc fcQAudioEngine_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAudioEngine_override_virtual_disconnectNotify".}
proc fcQAudioEngine_staticMetaObject(): pointer {.importc: "QAudioEngine_staticMetaObject".}
proc fcQAudioEngine_delete(self: pointer) {.importc: "QAudioEngine_delete".}


func init*(T: type QAudioEngine, h: ptr cQAudioEngine): QAudioEngine =
  T(h: h)
proc create*(T: type QAudioEngine, ): QAudioEngine =

  QAudioEngine.init(fcQAudioEngine_new())
proc create*(T: type QAudioEngine, parent: gen_qobject.QObject): QAudioEngine =

  QAudioEngine.init(fcQAudioEngine_new2(parent.h))
proc create*(T: type QAudioEngine, sampleRate: cint): QAudioEngine =

  QAudioEngine.init(fcQAudioEngine_new3(sampleRate))
proc create*(T: type QAudioEngine, sampleRate: cint, parent: gen_qobject.QObject): QAudioEngine =

  QAudioEngine.init(fcQAudioEngine_new4(sampleRate, parent.h))
proc metaObject*(self: QAudioEngine, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQAudioEngine_metaObject(self.h))

proc metacast*(self: QAudioEngine, param1: cstring): pointer =

  fcQAudioEngine_metacast(self.h, param1)

proc metacall*(self: QAudioEngine, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQAudioEngine_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QAudioEngine, s: cstring): string =

  let v_ms = fcQAudioEngine_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setOutputMode*(self: QAudioEngine, mode: QAudioEngineOutputMode): void =

  fcQAudioEngine_setOutputMode(self.h, cint(mode))

proc outputMode*(self: QAudioEngine, ): QAudioEngineOutputMode =

  QAudioEngineOutputMode(fcQAudioEngine_outputMode(self.h))

proc sampleRate*(self: QAudioEngine, ): cint =

  fcQAudioEngine_sampleRate(self.h)

proc setOutputDevice*(self: QAudioEngine, device: gen_qaudiodevice.QAudioDevice): void =

  fcQAudioEngine_setOutputDevice(self.h, device.h)

proc outputDevice*(self: QAudioEngine, ): gen_qaudiodevice.QAudioDevice =

  gen_qaudiodevice.QAudioDevice(h: fcQAudioEngine_outputDevice(self.h))

proc setMasterVolume*(self: QAudioEngine, volume: float32): void =

  fcQAudioEngine_setMasterVolume(self.h, volume)

proc masterVolume*(self: QAudioEngine, ): float32 =

  fcQAudioEngine_masterVolume(self.h)

proc setPaused*(self: QAudioEngine, paused: bool): void =

  fcQAudioEngine_setPaused(self.h, paused)

proc paused*(self: QAudioEngine, ): bool =

  fcQAudioEngine_paused(self.h)

proc setRoomEffectsEnabled*(self: QAudioEngine, enabled: bool): void =

  fcQAudioEngine_setRoomEffectsEnabled(self.h, enabled)

proc roomEffectsEnabled*(self: QAudioEngine, ): bool =

  fcQAudioEngine_roomEffectsEnabled(self.h)

proc setDistanceScale*(self: QAudioEngine, scale: float32): void =

  fcQAudioEngine_setDistanceScale(self.h, scale)

proc distanceScale*(self: QAudioEngine, ): float32 =

  fcQAudioEngine_distanceScale(self.h)

proc outputModeChanged*(self: QAudioEngine, ): void =

  fcQAudioEngine_outputModeChanged(self.h)

proc miqt_exec_callback_QAudioEngine_outputModeChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onoutputModeChanged*(self: QAudioEngine, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAudioEngine_connect_outputModeChanged(self.h, cast[int](addr tmp[]))
proc outputDeviceChanged*(self: QAudioEngine, ): void =

  fcQAudioEngine_outputDeviceChanged(self.h)

proc miqt_exec_callback_QAudioEngine_outputDeviceChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onoutputDeviceChanged*(self: QAudioEngine, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAudioEngine_connect_outputDeviceChanged(self.h, cast[int](addr tmp[]))
proc masterVolumeChanged*(self: QAudioEngine, ): void =

  fcQAudioEngine_masterVolumeChanged(self.h)

proc miqt_exec_callback_QAudioEngine_masterVolumeChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()
